Accessibility support for progress element https://bugs.webkit.org/show_bug.cgi?id=37275

Reviewed by Darin Adler.

WebCore:

Implement AccessibilityProgressIndicator to hook up progress element to accessibility framework.

Test: platform/mac/accessibility/progressbar.html

* GNUmakefile.am:
* WebCore.gypi:
* WebCore.pro:
* WebCore.vcproj/WebCore.vcproj:
* WebCore.xcodeproj/project.pbxproj:
* accessibility/AXObjectCache.cpp:
* accessibility/AccessibilityProgressIndicator.cpp: Added.
* accessibility/AccessibilityProgressIndicator.h: Added.
* rendering/RenderProgress.cpp:
* rendering/RenderProgress.h:

LayoutTests:

* platform/mac/accessibility/progressbar-expected.txt: Added.
* platform/mac/accessibility/progressbar.html: Added.



Canonical link: https://commits.webkit.org/48782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57494 268f45cc-cd09-0410-ab3c-d52691b4dbfc