WebCore/rendering/RenderProgress.cpp
@@ -64,7 +64,7 @@ void RenderProgress::layout()
 
 void RenderProgress::updateFromElement()
 {
-    HTMLProgressElement* element = static_cast<HTMLProgressElement*>(node());
+    HTMLProgressElement* element = progressElement();
     if (m_position == element->position())
         return;
     m_position = element->position();
@@ -110,6 +110,11 @@ void RenderProgress::updateAnimationState()
     } else
         m_animationTimer.stop();
 }
+
+HTMLProgressElement* RenderProgress::progressElement() const
+{
+    return static_cast<HTMLProgressElement*>(node());
+}    
 
 } // namespace WebCore
 #endif
